--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,11 @@ spring:
       port: 27017
       host: localhost
 
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+
 gcp:
   config:
     file: gcp-account-file.json
@@ -13,3 +18,6 @@ gcp:
   bucket:
     id: productsync_product
 
+opencage:
+  key: f374b40d10584d2e9381a6c51caebb0c
+  url: https://api.opencagedata.com/geocode/v1/json
